--- a/app.json
+++ b/app.json
@@ -7,6 +7,10 @@
     "ROOT_URL": {
       "description": "The full URL of your app (by default, http://appname.herokuapp.com)."
     },
+    "MAIL_URL": {
+      "description": "The SMTP://login@postmark address.",
+      "required": false
+    },
     "BUILDPACK_URL": "https://github.com/simonv3/meteor-buildpack-horse.git"
   },
   "addons": [
