--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "dependencies": {
     "angular": "^1.5.8",
     "angular-meteor": "^1.3.2",
-    "bcrypt": "^0.8.7"
+    "bcrypt": "^0.8.7",
+    "bluebird": "^3.4.6",
+    "fibers": "^1.0.15",
+    "mkdirp": "^0.5.1",
+    "moment": "^2.15.1",
+    "slugify": "^1.0.2"
   }
 }
