--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "devDependencies": {},
   "dependencies": {
     "angular": "^1.5.8",
+    "angular-legacy-sortablejs": "^0.4.1",
     "angular-meteor": "^1.3.2",
+    "angular-ui-tree": "^2.22.1",
     "bcrypt": "^0.8.7",
     "bluebird": "^3.4.6",
     "fibers": "^1.0.15",
