--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "angular-ui-tree": "^2.22.1",
     "bcrypt": "^0.8.7",
     "bluebird": "^3.4.6",
+    "csv-stringify": "^4.3.1",
     "fibers": "^1.0.15",
+    "meteor-node-stubs": "^0.4.1",
     "mkdirp": "^0.5.1",
     "moment": "^2.15.1",
     "slugify": "^1.0.2"
